--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <title>TimeBoxing | HDz</title>
   </head>
   <body>
@@ -147,9 +147,9 @@
           "
         />
         <p class="datetime">
-          <span class="getday"></span>
+          <span class="getday">Day</span>
           &nbsp;|&nbsp;
-          <span class="getdate"></span>
+          <span class="getdate">Date</span>
         </p>
         <div class="timebox-container" id="timebox">
           <div class="head-cell">
